--- a/main.css
+++ b/main.css
@@ -52,3 +52,25 @@ table {
   *border-collapse: expression('separate', cellSpacing='10px');
 }
 
+.fullwidth {
+	width: 100%;
+}
+
+.red {
+	color: red;
+}
+
+.blue {
+	color: blue;
+}
+
+.center {
+	text-align: center;
+}
+
+.profilepic {
+	margin-left:40%;
+	border-radius:50%;
+	width:25%;
+	height:auto;
+}
